tests/negative/Test12.sp
(* Return without a function *)
while true {
	return a;
}